<resources>
    <string name="app_name">Rapid Chat</string>
    <string name="display_name">Display Name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="yourEmail">Your Email</string>
    <string name="logout">Logout</string>
    <string name="create_a_new_account">Create a New Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
